# src/tsoa-auto/swagger.json
@@ -906,6 +906,18 @@
 					"password": {
 						"type": "string"
 					},
+					"department": {
+						"type": "number",
+						"format": "double"
+					},
+					"branch": {
+						"type": "number",
+						"format": "double"
+					},
+					"company": {
+						"type": "number",
+						"format": "double"
+					},
 					"role": {
 						"type": "number",
 						"format": "double"
@@ -1873,7 +1885,7 @@
 				"parameters": []
 			}
 		},
-		"/employee/{employeeId}": {
+		"/company/{companyId}/branch/{branchId}/department/{departmentId}/employee/{employeeId}": {
 			"get": {
 				"operationId": "GetOneEmployee",
 				"responses": {
@@ -1942,7 +1954,7 @@
 				]
 			}
 		},
-		"/employee": {
+		"/company/{companyId}/branch/{branchId}/department/{departmentId}/employee": {
 			"get": {
 				"operationId": "GetAllEmployeeBranch",
 				"responses": {
@@ -1988,12 +2000,36 @@
 				"tags": [
 					"Employee"
 				],
-				"security": [
+				"security": [],
+				"parameters": [
 					{
-						"Api-Token": []
+						"in": "path",
+						"name": "companyId",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					},
+					{
+						"in": "path",
+						"name": "branchId",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					},
+					{
+						"in": "path",
+						"name": "departmentId",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
 					}
 				],
-				"parameters": [],
 				"requestBody": {
 					"required": true,
 					"content": {
@@ -2006,7 +2042,7 @@
 				}
 			}
 		},
-		"/employee/login": {
+		"/company/{companyId}/branch/{branchId}/department/{departmentId}/employee/login": {
 			"post": {
 				"operationId": "UserLogin",
 				"responses": {
